test/cli/test/update/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-update-no-label-change
spec:
  background: false
  rules:
    - name: check-label-change
      match:
        all:
          - resources:
              kinds:
                - Deployment
      preconditions:
        all:
          - key: "{{ request.operation || '' }}"
            operator: Equals
            value: UPDATE
      validate:
        failureAction: Audit
        message: Pass only if labels are different
        deny:
          conditions:
            any:
              - key: "{{ request.object.metadata.labels || `{}` }}"
                operator: Equals
                value: "{{ request.oldObject.metadata.labels || `{}` }}"
