test/cli/test/update/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: my-user
  annotations:
    existing-annotation: existing-value
  labels:
    existing-label: existing-value
spec:
  replicas: 1
