test/cli/test/update/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
globalValues:
  request.oldObject.metadata.labels.existing-label: foo
  request.operation: UPDATE
kind: Value
metadata:
  name: values
